--- a/q2_list.ipynb
+++ b/q2_list.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,8 @@
       "Square of even numbers:  [36, 144, 400, 144, 2500, 10000]\n",
       "\n",
       "Sub Que3\n",
-      "Sum of even numbers:  200\n",
+      "[6, 12, 20, 12, 50, 100]\n",
+      "Sum digits of even numbers:  [6, 3, 2, 3, 5, 1]\n",
       "\n",
       "Sub Que4\n",
       "[3, 6, 9, 12, 12, 15, 20, 25, 50, 99, 100]\n",
@@ -39,9 +40,10 @@
     "print(\"Even numbers: \",evenNumbers)\n",
     "print(\"Square of even numbers: \",q2)\n",
     "\n",
-    "q3 = [x+x for x in evenNumbers]\n",
+    "q3 = [sum(map(int, str(x))) for x in evenNumbers]\n",
     "print(\"\\nSub Que3\")\n",
-    "print(\"Sum of even numbers: \",q3[len(q3)-1])\n",
+    "print(evenNumbers)\n",
+    "print(\"Sum digits of even numbers: \",q3)\n",
     "\n",
     "sortedList = sorted(dateOfTransaction)\n",
     "length = len(sortedList)-1\n",
@@ -52,6 +54,21 @@
     "print(q4)\n",
     "# q4 = [x for x in sortedList if x!=sortedList[x+1]]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 April 1987\n"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
